--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ html {
     padding-right: var(--min-padding);
 }
 .header {
+    background-color: #fff;
     box-shadow: 0 1px 2px rgba(211 211 211 / 50%);
 }
 .header-inner {
