--- a/sample2/css/sample2.css
+++ b/sample2/css/sample2.css
@@ -1,3 +1,30 @@
+body {
+    padding-top: 50px;
+}
+body.fixed {
+    height: 100%;
+    overflow: hidden;
+}
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0 0 0 / 20%);
+    z-index: 1;
+}
+.overlay.active {
+    display: block;
+}
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 3;
+}
 .hamburger-btn {
     position: relative;
     display: none;
@@ -42,18 +69,19 @@
     .header-nav {
         position: fixed;
         top: 0;
-        left: -100%;
+        right: -100%;
         width: 35%;
         height: 100%;
         background-color: rgba(255 255 255 / 95%);
-        transition: left .3s;
+        transition: right .3s;
+        z-index: -1;
     }
     .hamburger-btn.active+.header-nav {
-        left: 0;
+        right: 0;
     }
     .header-nav-list {
         display: block;
-        padding-top: 2rem;
+        padding-top: 5rem;
     }
     .header-nav-item__link::after {
         content: none;
