--- a/sample2/css/sample2.css
+++ b/sample2/css/sample2.css
@@ -32,33 +32,34 @@ body.fixed {
     align-items: center;
     width: 45px;
     height: 45px;
+    padding: 0;
     border: 0;
+    font-size: 0;
     background: none;
     cursor: pointer;
 }
-.hamburger-btn-bar {
-    position: absolute;
-    display: inline-block;
-    width: 60%;
-    height: 2px;
-    border-radius: 2px;
-    background-color: #333;
-    transition: transform .3s ease-out;
+.hamburger-btn svg {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
-.hamburger-btn-bar:nth-child(1) {
-    transform: translateY(-9px);
+.hamburger-btn use {
+    transform-origin: center;
+    transition: transform .3s;
 }
-.hamburger-btn-bar:nth-child(3) {
-    transform: translateY(9px);
+.hamburger-btn use:nth-of-type(1) {
+    transform: translateY(-8px);
 }
-
-.hamburger-btn.active .hamburger-btn-bar:nth-child(1) {
+.hamburger-btn use:nth-of-type(3) {
+    transform: translateY(8px);
+}
+.hamburger-btn.active use:nth-of-type(1) {
     transform: rotate(45deg);
 }
-.hamburger-btn.active .hamburger-btn-bar:nth-child(2) {
+.hamburger-btn.active use:nth-of-type(2) {
     transform: scaleX(0);
 }
-.hamburger-btn.active .hamburger-btn-bar:nth-child(3) {
+.hamburger-btn.active use:nth-of-type(3) {
     transform: rotate(-45deg);
 }
 
