--- a/sample1/css/sample1.css
+++ b/sample1/css/sample1.css
@@ -34,6 +34,26 @@
 .hamburger-btn.active .hamburger-btn-bar:nth-child(3) {
     transform: rotate(-45deg);
 }
+.header-nav-item {
+    position: relative;
+}
+.header-submenu-list {
+    position: absolute;
+    display: none;
+    padding-left: 0;
+    list-style: none;
+    white-space: nowrap;
+}
+.header-nav-item:hover .header-submenu-list {
+    display: block;
+    background: #333;
+}
+.header-submenu-item__link {
+    display: block;
+    padding: .25rem 1rem;
+    text-decoration: none;
+    color: white;
+}
 
 @media (max-width: 768px) {
     .hamburger-btn {
