--- a/sample1/css/sample1.css
+++ b/sample1/css/sample1.css
@@ -54,6 +54,29 @@
     text-decoration: none;
     color: white;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
+.image-box {
+    background: saddlebrown;
+    padding: 1rem;
+}
+.image-overlap1,
+.image-overlap2 {
+    display: block;
+    border: 6px solid white;
+ }
+.image-overlap1 {
+    width: 70%;
+}
+
+.image-overlap2 {
+    position: relative;
+    width: 45%;
+    margin: -20% 0 0 auto;
+}
+
 
 @media (max-width: 768px) {
     .hamburger-btn {
