--- a/sample1/css/sample1.css
+++ b/sample1/css/sample1.css
@@ -90,6 +90,7 @@ img {
         height: 100%;
         background-color: rgba(255 255 255 / 95%);
         transition: left .3s;
+        overflow-y: scroll;
     }
     .hamburger-btn.active+.header-nav {
         left: 0;
