--- a/sample3/css/sample3.css
+++ b/sample3/css/sample3.css
@@ -72,7 +72,9 @@ body.fixed {
 .hamburger-btn[aria-expanded="true"]::after {
     transform: rotate(-45deg);
 }
-
+.header-nav-item:nth-child(n+5) {
+    display: none;
+}
 @media (max-width: 768px) {
     .hamburger-btn {
         display: inline-flex;
@@ -95,6 +97,9 @@ body.fixed {
     .header-nav-list {
         display: block;
         padding-top: 5rem;
+    }
+    .header-nav-item:nth-child(n+5) {
+        display: block;
     }
     .header-nav-item__link::after {
         content: none;
