--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ html {
 * {
     box-sizing: border-box;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
 
 .container {
     max-width: calc(var(--container-width) + var(--min-padding) * 2);
