--- a/sample1/css/sample1.css
+++ b/sample1/css/sample1.css
@@ -102,3 +102,13 @@ img {
         content: none;
     }
 }
+
+.flex{
+    display: flex;
+    gap: 20px;
+}
+.flex div {
+    width: 50%;
+    height: 300px;
+    background-color: #f00;
+}
