--- a/sample-css/css/sample1.css
+++ b/sample-css/css/sample1.css
@@ -1,3 +1,16 @@
+section {
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+}
+h2 {
+    margin-bottom: 2rem;
+    padding-left: .5rem;
+    color: #666;
+    border-left: 5px solid cornflowerblue;
+}
+body {
+    padding-bottom: 5rem;
+}
 .hamburger-btn {
     position: relative;
     display: none;
@@ -113,10 +126,81 @@ img {
     background-color: #f00;
 }
 
-p {
-    opacity: 0;
-    transition: opacity .5s;
+.clamp-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: min(95%,840px);
+    height: 300px;
+    margin: 1rem auto 0;
+    background-color: #f0f0f0;
+    font-size: clamp(1rem,3vw,3rem);
+    font-weight: bold;
 }
-.show {
-    opacity: 1;
+.row {
+    display: flex;
+    gap: 20px;
+    margin-top: 1rem;
+}
+.col {
+    flex-grow: 1;
+    min-height: 500px;
+}
+
+.object-fit-cover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.object-fit-contain {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+body {
+    font-family: "Lucida Sans Unicode", "Lucida Grande",
+    sans-serif;
+}
+.mix-blend-mode {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 400px;
+    margin-top: 1rem;
+    background: url(../img/zoom3.jpeg) no-repeat center/cover;
+}
+.mix-blend-mode-text {
+    margin: 0;
+    mix-blend-mode: overlay; /* オーバーレイを指定 */
+    color: white;
+    font-size: 150px;
+    font-weight: bold;
+}
+.backdrop-filter {
+    height: 400px;
+    margin-top: 1rem;
+    background: url(../img/zoom3.jpeg) no-repeat center/cover;
+}
+.backdrop-filter-text {
+    width: 50%;
+    height: 100%;
+    padding: 100px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.clip-path {
+    max-width: 400px;
+    clip-path: polygon(51% 9%, 70% 34%, 96% 36%, 71% 61%, 84% 85%, 49% 69%, 21% 88%, 29% 62%, 10% 34%, 38% 34%);
+}
+.fit-content {
+    padding: 1.5rem 0;
+}
+.fit-content-text {
+    width: fit-content;
+    margin: auto;
+    border: 1px solid #999;
+    font-size: 3rem;
 }
